--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,5 @@
 <div class="logo">
-  <a href="/index.html">
+  <a href="index.html">
     <img src="img/mini-logo-icon.png" alt="logo" />
     Your<span class="highlight">Future</span></a>
 </div>
